# ouroboros

./: .gitignore  Ouroboros для руководителя банка - сценарий поручений руководства.pptx  gigachat_api_smoke.py  groq_api_smoke.py  pyproject.toml  ws_analytics_service.py
outputs/manual-20260603-boss-instruction/presentations/boss-instruction-scenario/slides/: build_boss_instruction_deck.js
tests/: test_ws_analytics_service.py
