[project]
name = "ouroboros"
version = "0.1.0"
description = ""
authors = [
    {name = "Amadey",email = "amadey1110@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "openai (>=2.41.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
